move tests to correct location

--- a/ShoppingList.Items/Tests/ShoppingList.Items.Api.Test/ShoppingList.Items.Api.Test.csproj
+++ b/ShoppingList.Items/Tests/ShoppingList.Items.Api.Test/ShoppingList.Items.Api.Test.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ShoppingList.Items\ShoppingList.Items.Api\ShoppingList.Items.Api.csproj" />
+    <ProjectReference Include="..\..\ShoppingList.Items.Api\ShoppingList.Items.Api.csproj" />
   </ItemGroup>
 
 </Project>
