initial messaging implementation

--- a/ShoppingList.Items/ShoppingList.Items.Api/ShoppingList.Items.Api.csproj
+++ b/ShoppingList.Items/ShoppingList.Items.Api/ShoppingList.Items.Api.csproj
@@ -25,6 +25,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ShoppingList.Items.Data\ShoppingList.Items.Data.csproj" />
+    <ProjectReference Include="..\ShoppingList.Items.Messaging.Receive\ShoppingList.Items.Messaging.Receive.csproj" />
+    <ProjectReference Include="..\ShoppingList.Items.Messaging.Send\ShoppingList.Items.Messaging.Send.csproj" />
+    <ProjectReference Include="..\ShoppingList.Items.Messaging\ShoppingList.Items.Messaging.csproj" />
     <ProjectReference Include="..\ShoppingList.Items.Service\ShoppingList.Items.Service.csproj" />
   </ItemGroup>
 
