--- a/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
+++ b/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "PgSql": "Host=host.docker.internal;Port=49155;Database=items_db;Username=postgres;Password=postgrespw"
   },
+  "RabbitMq": {
+    "Hostname": "rabbitmq",
+    "QueueName": "ItemSyncQueue",
+    "UserName": "user",
+    "Password": "password",
+    "Enabled": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
