--- a/ShoppingList.Items/ShoppingList.Items.Service/ShoppingList.Items.Service.csproj
+++ b/ShoppingList.Items/ShoppingList.Items.Service/ShoppingList.Items.Service.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ShoppingList.Items.Data\ShoppingList.Items.Data.csproj" />
+    <ProjectReference Include="..\ShoppingList.Items.Messaging.Send\ShoppingList.Items.Messaging.Send.csproj" />
   </ItemGroup>
 
 </Project>
