--- a/ShoppingList.Items/docker-compose.yml
+++ b/ShoppingList.Items/docker-compose.yml
@@ -10,6 +10,15 @@ services:
       - 5432:5432
     volumes:
       - data:/var/lib/postgresql
+  rabbitmq:
+    container_name: rabbitmq
+    ports:
+        - 5672:5672
+        - 15672:15672
+    environment:
+        - RABBITMQ_DEFAULT_USER=user
+        - RABBITMQ_DEFAULT_PASS=password        
+    image: rabbitmq:3-management
   shoppinglist.items.api:
     image: ${DOCKER_REGISTRY-}shoppinglistitemsapi
     build:
