--- a/ShoppingList.Items/docker-compose.yml
+++ b/ShoppingList.Items/docker-compose.yml
@@ -10,6 +10,17 @@ services:
       - 5432:5432
     volumes:
       - data:/var/lib/postgresql
+  pgadmin:
+    container_name: pgadmin4
+    image: dpage/pgadmin4:latest
+    environment:
+        PGADMIN_DEFAULT_EMAIL: admin@example.com
+        PGADMIN_DEFAULT_PASSWORD: Qwerty_1
+        PGADMIN_LISTEN_PORT: 80
+    ports:
+        - "5050:80"
+    volumes:
+        - pgadmin-data:/var/lib/pgadmin
   rabbitmq:
     container_name: rabbitmq
     ports:
@@ -35,3 +46,4 @@ services:
       - ConnectionStrings__PgSql=Host=postgres;Port=5432;Database=items_db;Username=postgres;Password=postgrespw
 volumes:
   data:
+  pgadmin-data:
