move enitities to separate project

--- a/ShoppingList.Items/ShoppingList.Items.Data/ShoppingList.Items.Data.csproj
+++ b/ShoppingList.Items/ShoppingList.Items.Data/ShoppingList.Items.Data.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShoppingList.Items.Entities\ShoppingList.Items.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
