--- a/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
+++ b/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
@@ -4,7 +4,8 @@
   },
   "RabbitMq": {
     "Hostname": "rabbitmq",
-    "QueueName": "ItemSyncQueue",
+    "QueueName": "ItemSyncQueue1",
+    "ExchangeName": "ItemSyncExchange",
     "UserName": "user",
     "Password": "password",
     "Enabled": true
