--- a/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
+++ b/ShoppingList.Items/ShoppingList.Items.Api/appsettings.json
@@ -10,11 +10,17 @@
     "Password": "password",
     "Enabled": true
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "Elastic": {
+    "Url": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
