--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       
       - name: Build image and push to Docker Hub
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
